<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add"
        android:title="@string/add_task"
        android:icon="@drawable/ic_add"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_trash"
        android:title="@string/trash"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_check_update"
        android:title="@string/check_update"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_battery_opt"
        android:title="@string/battery_opt_menu"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_clear_done"
        android:title="@string/clear_done"
        app:showAsAction="never" />
</menu>
